added color chart page

--- a/index.html
+++ b/index.html
@@ -72,17 +72,23 @@
         </div>
         <div class="top-row mb-4 row ">
             <div class="top-item paint-calculator col-sm-12 col-md-6">
-                <button class="top-button">Paint Calculator</button>
-                <div><p>Find out how much paint you'll need befor you begin</p></div>
+                <div class="info">
+                    <h3 class="bold">Paint Calculator<span style="color: red;">.</span></h3>
+                    <div><p>Find out how much paint you'll need befor you begin</p></div>
+                    <a href="#" class="top-button">Try It</a>
+                </div>
             </div>
             <div class="top-item color-chart col-sm-12 col-md-6">
-                <button class="top-button">Color Chart</button>
-                <div><p>Get the best tints, colors, suggestions and tools</p></div>
+                <div class="info">
+                    <h3 class="bold">Color Chart<span style="color: red;">.</span></h3>
+                    <div><p >Get the best tints, colors and suggestions.</p></div>
+                    <a href="./shop-by-color.html?color=" class="top-button">Try It</a>
+                </div>
             </div>
         </div>
         <div class="container-fluid custom-padding " style="margin-top: 70px;">
             <div class="header-row">
-                <h1>Shop by Color</h1>
+                <h1 class="bold" style="color: rgb(64, 126, 184);">Some popular colors<span style="color: red;">.</span></h1>
                 <div class="slider-controls">
                     <button class="slider-prev">❮</button> <!-- Left arrow -->
                     <button class="slider-next">❯</button> <!-- Right arrow -->
@@ -92,69 +98,64 @@
            
             <div class="slider">
                 <div class="slider-wrapper">
-                    <div class="slider-item">
+                    <a href="./shop-by-color.html?color=white" class="slider-item">
                         <img src="assets/images/colors/white.jpg" alt="Card 1">
                         <p><span class="icon-class"><img class="white" src="assets/images/colors/white.png"></span>White</p>
-                    </div>
-                    <div class="slider-item">
+                    </a>
+                    <a href="./shop-by-color.html?color=beige" class="slider-item">
                         <img src="assets/images/colors/beige.jpg" alt="Card 2">
                         <p><span class="icon-class"><img class="beige"  src="assets/images/colors/beige.png"></span>Beige</p>
-                    </div>
-                    <div class="slider-item">
+                    </a>
+                    <a href="./shop-by-color.html?color=green" class="slider-item">
                         <img src="assets/images/colors/green.jpg" alt="Card 3">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="green"  src="assets/images/colors/green.png"></span>Green</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="green" src="assets/images/colors/green.png"></span>Green</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=blue" class="slider-item">
                         <img src="assets/images/colors/blue.jpg" alt="Card 4">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="blue"  src="assets/images/colors/blue.png"></span>Blue</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="blue" src="assets/images/colors/blue.png"></span>Blue</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=pink" class="slider-item">
                         <img src="assets/images/colors/pink.jpg" alt="Card 5">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="pink"  src="assets/images/colors/pink.png"></span>Pink</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="pink" src="assets/images/colors/pink.png"></span>Pink</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=orange" class="slider-item">
                         <img src="assets/images/colors/orange.jpg" alt="Card 6">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="orange"  src="assets/images/colors/orange.png"></span>Orange</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="orange" src="assets/images/colors/orange.png"></span>Orange</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=grey" class="slider-item">
                         <img src="assets/images/colors/grey.jpg" alt="Card 7">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="grey"  src="assets/images/colors/grey.png"></span>Grey</p>
-                    </div>
-                    <div class="slider-item">
-                        <img src="assets/images/colors/teal.jpg" alt="Card 8">
-                        <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="teal"  src="assets/images/colors/teal.png"></span>Teal</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="grey" src="assets/images/colors/grey.png"></span>Grey</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=purple" class="slider-item">
                         <img src="assets/images/colors/purple.jpg" alt="Card 9">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="purple"  src="assets/images/colors/purple.png"></span>Purple</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="purple" src="assets/images/colors/purple.png"></span>Purple</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=black" class="slider-item">
                         <img src="assets/images/colors/black.jpg" alt="Card 10">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="black"  src="assets/images/colors/black.png"></span>Black</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="black" src="assets/images/colors/black.png"></span>Black</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=red" class="slider-item">
                         <img src="assets/images/colors/red.jpg" alt="Card 11">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="red"  src="assets/images/colors/red.png"></span>Red</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="red" src="assets/images/colors/red.png"></span>Red</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=yellow" class="slider-item">
                         <img src="assets/images/colors/yellow.jpg" alt="Card 12">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="yellow"  src="assets/images/colors/yellow.png"></span>Yellow</p>
-                    </div>
-                    <div class="slider-item">
+                        <p><span class="icon-class"><img class="yellow" src="assets/images/colors/yellow.png"></span>Yellow</p>
+                    </a>
+                    <a href="./shop-by-color.html?color=brown" class="slider-item">
                         <img src="assets/images/colors/brown.jpg" alt="Card 13">
                         <i class="icon-class"></i>
-                        <p><span class="icon-class"><img class="brown"  src="assets/images/colors/brown.png"></span>Brown</p>
-                    </div>
+                        <p><span class="icon-class"><img class="brown" src="assets/images/colors/brown.png"></span>Brown</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -280,6 +281,10 @@
                     <h3>Address</h3>
                     <p>Along Dei-Dei Kubwa Express Way, Abuja Nigeria<br>Email: info@bluenixpaints.com<br>Phone: +234 123 456 7890</p>
                 </div>
+            </div>
+            <!-- Copyright Section -->
+            <div class="copyright-section">
+                <p>&copy; 2025 Bluenix Paints. All rights reserved.</p>
             </div>
         </div>
     </footer>
