--- a/shop-by-color.html
+++ b/shop-by-color.html
@@ -22,16 +22,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">Home</a>
+                                <a class="nav-link active" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Products</a>
+                                <a class="nav-link" href="./products.html">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -108,21 +108,22 @@
                 <div class="footer-column">
                     <h3>Our Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Products</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./products.html">Products</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
 
                 <!-- Third Column: Support -->
                 <div class="footer-column">
-                    <h3>Support</h3>
+                    <h3>Support & Tools</h3>
                     <ul class="footer-links">
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Customer Service</a></li>
-                        <li><a href="#">Shipping & Returns</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="./paint-calculator.html">Paint Calculator</a></li>
+<li><a href="./shop-by-color.html">Color Studio</a></li>
+<li><a href="./assets/Bluenix Paints Colour Chart.pdf">Download Color Chart</a></li>
+                        
                     </ul>
                 </div>
 
