--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./about-us.html">About</a>
                             </li>
+<li class="nav-item">
+                                <a class="nav-link" href="./showcase.html">Showcase</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
@@ -61,7 +64,7 @@
                 <!-- Phone -->
                 <div class="contact-detail">
                     <h4>Phone</h4>
-                    <p><a href="tel:+2341234567890">+234 123 456 7890</a></p>
+                    <p><a href="tel:+2341234567890">+234 (0) 902 462 8548</a></p>
                 </div>
                 
                 <!-- Email -->
@@ -155,7 +158,9 @@
                     <ul class="footer-links">
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./products.html">Products</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="./about-us.html">About Us</a></li>
+                        <li><a href="./showcase.html">Showcase</a></li>
+
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -175,7 +180,7 @@
                 <!-- Fourth Column: Address -->
                 <div class="footer-column">
                     <h3>Address</h3>
-                    <p>Along Dei-Dei Kubwa Express Way, Abuja Nigeria<br>Email: info@bluenixpaints.com<br>Phone: +234 123 456 7890</p>
+                    <p>Along Dei-Dei Kubwa Express Way, Abuja Nigeria<br>Email: info@bluenixpaints.com<br>Phone: +234 (0) 902 462 8548</p>
                 </div>
 
             </div>
