--- a/products.html
+++ b/products.html
@@ -30,6 +30,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./about-us.html">About</a>
                             </li>
+<li class="nav-item">
+                                <a class="nav-link" href="./showcase.html">Showcase</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
@@ -62,7 +65,7 @@
                         <li>Good Durability</li>
                     </ul>
 
-                    <a href="#" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
+                    <a href="./shop-by-color.html" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
                 </div>
             </div>
         </div>
@@ -84,7 +87,7 @@
                         <li>High Durability</li>
                     </ul>
 
-                    <a href="#" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
+                    <a href="./shop-by-color.html" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
                 </div>
                 
             </div>
@@ -109,7 +112,7 @@
                         <li>Enhances Natural Light with its Soft Reflective Quality</li> 
                     </ul>
 
-                    <a href="#" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
+                    <a href="./shop-by-color.html" class="view-color"><span><img src="./assets/images/color-palette.png" style="width: 20px;" alt=""></span> View Colors</a>
                 </div>
                 
             </div>
@@ -166,7 +169,9 @@
                     <ul class="footer-links">
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./products.html">Products</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="./about-us.html">About Us</a></li>
+                        <li><a href="./showcase.html">Showcase</a></li>
+
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -186,7 +191,7 @@
                 <!-- Fourth Column: Address -->
                 <div class="footer-column">
                     <h3>Address</h3>
-                    <p>Along Dei-Dei Kubwa Express Way, Abuja Nigeria<br>Email: info@bluenixpaints.com<br>Phone: +234 123 456 7890</p>
+                    <p>Along Dei-Dei Kubwa Express Way, Abuja Nigeria<br>Email: info@bluenixpaints.com<br>Phone: +234 (0) 902 462 8548</p>
                 </div>
 
             </div>
