--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Bluenix Paints</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
 </head>
 <body style="background-color: rgb(235, 235, 235);">
