--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Bluenix Paints</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
 </head>
 <body style="background-color:white;">
@@ -191,6 +191,6 @@
         </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/contact.js"></script>
+    <script src="js/contact.js?v=1.1"></script>
 </body>
 </html>
