--- a/paint-calculator.html
+++ b/paint-calculator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paint Calculator | Bluenix Paints</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
 </head>
 <body style="background-color: rgb(235, 235, 235);">
@@ -190,6 +190,6 @@
         </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/calculator.js"></script>
+    <script src="js/calculator.js?v=1.1"></script>
 </body>
 </html>
